[gd_scene load_steps=2 format=3 uid="uid://djpbq8pxjqwfu"]

[ext_resource type="Script" uid="uid://cdghufnklfwd2" path="res://menu/menu.gd" id="1_lti8b"]

[node name="Menu" type="Node"]
script = ExtResource("1_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -55.5
offset_right = 61.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButtonWhite" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start White"

[node name="StartButtonBlack" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start Black"

[node name="StartButtonFen" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start from FEN"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButtonWhite" to="." method="_on_start_button_white_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButtonBlack" to="." method="_on_start_button_black_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButtonFen" to="." method="_on_start_button_fen_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
